--- a/CatResponder/MainWindow.xaml
+++ b/CatResponder/MainWindow.xaml
@@ -5,8 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CatResponder"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Height="300" Width="300" HorizontalAlignment="Left" VerticalAlignment="Top">
+    <Window.Resources>
+        <Image x:Key="ON" Source="..\Images\ONswitch.png" Height="50" Width="50" />
+        <Image x:Key="OFF" Source="..\Images\OFFswitch.png" Height="50" Width="50" />
+        <Image x:Key="CAT" Source="..\Images\catSkype.png" Height="50" Width="50" />
+    </Window.Resources>
     <Grid>
-        
+        <Button x:Name="buttonCat" Content="Button" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Click="buttonCat_Click" MouseEnter="buttonCat_MouseEnter"/>
+
     </Grid>
 </Window>
